get room entry.
